style/style.css
@import 'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';

:root {
  --background: rgb(16, 16, 16);
  --text: #FAFAFA;
}

* {
  font-family: "Roboto", sans-serif;
}

html, body {
  overflow: hidden;
}

body {
  position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100vh;
  background: var(--background);
  color: var(--text);
}

h1, h2, h3, h4, h5, h6 {
  margin: 0px;
}

.loader {
  position: relative;
  margin: auto;
}

.table-loader {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.input-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 15vh;
}

#username {
  width: 500px;
  height: 100px;
  background: rgba(255, 255, 255, 0);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  color: var(--text);
  font-size: 2rem;
  padding-left: 1rem;
  outline: 1px solid #0068ff;
}

header {
  background: rgba(255, 255, 255, 0);
  backdrop-filter: blur(10px);
  border-bottom: 1px solid rgba(255, 255, 255, 0.18);
  width: 100%;
  text-align: center;
  display: flex;
  flex-direction: row;
  font-size: 1.4rem;
}

#home {
  cursor: pointer;
}

header h2 {
  margin-top: 5px;
}

header div {
  margin: auto;
  display: flex;
  flex-direction: row;
  padding-left: 80px;
}

.logo {
  width: 50px;
}

label {
  margin: 10px;
  font-size: 1.5rem;
}

#confirm {
  width: 300px;
  height: 80px;
  background: rgba(255, 255, 255, 0);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  color: var(--text);
  font-size: 2rem;
  padding-left: 1rem;
  background: #0068ff;
  margin-top: 10vh;
  cursor: pointer;
  transition: .3s;
}

#confirm:disabled {
  background: rgba(20, 20, 20, 1);
  box-shadow: none;
}

#confirm:hover:disabled {
  box-shadow: none;
}

#confirm:hover {
  box-shadow: 0px 0px 5px #0068ff;
}

.svg-wrapper {
  position: absolute;
  bottom: 0;
  z-index: -1;
  filter: invert(0.7);
}

.voted h1 {
  padding: 5px;
}

.error-wrapper {
  position: absolute;
  bottom: 0px;
  margin: auto;
  width: 100%;
  padding: 5px 5px;
  background: rgba(255, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 0, 0, 0.18);
  opacity: 0;
  text-align: center;
}

.votes-table {
  text-align: center;
  font-size: 1.5rem;
  padding: 10px;
  width: 100%;
  overflow: scroll;
}

.votes-table thead {
  font-size: 2rem;
}

.votes-table tbody {
  height: 480px;
}

.votes-table td {
  border-top: 1px solid rgba(255, 255, 255, 0.18);
}

.votes-table tr {
  height: 10px;
}

.table-wrapper {
  padding: 5px;
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: rgba(255, 255, 255, 0);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-radius: 10px;
  border: 2px solid rgba(255, 255, 255, 0.18);
  margin-top: 20px;
}

.pagination {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.pagination button {
  width: 100px;
  height: 30px;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-radius: 5px;
  cursor: pointer;
  transition: .3s;
}

button {
  background: #0068ff;
  color: var(--text);
  border: 1px solid rgba(255, 255, 255, 0.18);
  border-radius: 5px;
  padding: 5px;
  cursor: pointer;
}

.pagination input[type="text"] {
  width: 60px;
  height: 30px;
  background: rgba(255, 255, 255, 0);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-radius: 5px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  color: var(--text);
  font-size: 1.2rem;
  font-weight: 600;
  outline: none;
  text-align: center;
}

.g-recaptcha {
  margin-top: 5vh;
}

.search-wrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.search-wrapper input {
  width: 55%;
  height: 50px;
  background: rgba(255, 255, 255, 0);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  color: var(--text);
  font-size: 1.2rem;
  outline: none;
  padding-left: 1rem;
}

.search-wrapper button {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

.search {
  width: 25px;
  padding: 6px;
}

.title {
  padding: 10px;
  text-align: center;
  font-size: 2.5rem;
}

.voted {
  display: none;
  margin: auto;
  text-align: center;
  margin-top: 30vh;
  font-size: 1.2rem;
}

.voted button {
  width: 250px;
  height: 60px;
  font-size: 1.4rem;
  margin: 5px;
}

#votedUser {
  color: #0068ff;
}

main {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 85vh;
  align-items: center;
  justify-content: center;
}

.loading-wrapper {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  z-index: 100;
  background: #0008;
  transition: .2s;
  pointer-events: none;
}

.credits {
  width: 40px;
  height: 40px;
  padding: 20px;
  cursor: pointer;
  transition: filter .25s;
}

.credits:hover, .credits:active {
  filter: drop-shadow(0 0 5px #FFFA);
}

#search img {
  filter: invert(1);
}

@keyframes moveUp {
  0% {
    transform: translateY(0px);
  }

  100% {
    transform: translateY(-1500px);
  }
}

@media (max-aspect-ratio: 3/4) {
  #username {
    width: 80%;
    height: 80px;
    color: var(--text);
    font-size: 2rem;
    padding-left: 1rem;
  }

  #confirm {
    width: 70%;
    height: 80px;
  }

  .table-wrapper {
    width: 80%;
  }

  #votedUser {
    font-size: 2rem;
    display: block;
  }
  
  .input-wrapper {
    margin-top: 5vh;
  }

  .search-wrapper input {
    width: 70%;
  }
  
  .logo {
    width: 40px;
    padding-left: 10px;
  }

  main {
    height: 80vh;
  }
}

@media only screen and (max-width: 500px) {
  header div {
    padding-left: 0px;
  }
}

